# namhya-unicomm-MCP

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  config.py  db.py  main.py  mcp_server.py  models.py  soap.py  xml_utils.py
app/api/: routes.py
app/services/: normalizers.py  queries.py  request_builders.py  sync.py
tests/: test_bug_fixes.py  test_normalizers.py
