[project]
name = "namhya-unicomm-mcp"
version = "0.2.0"
description = "FastAPI + MCP server — direct-pull Unicommerce SOAP data for Claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "mcp>=1.9.0,<2.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "uvicorn[standard]>=0.30.5,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.23.8,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
